--- a/Turnbased-Game/Turnbased-Game.csproj
+++ b/Turnbased-Game/Turnbased-Game.csproj
@@ -7,4 +7,12 @@
         <RootNamespace>Turnbased_Game</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.3" />
+      <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.4.3">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
