--- a/Turnbased-Game/Turnbased-Game.csproj
+++ b/Turnbased-Game/Turnbased-Game.csproj
@@ -9,10 +9,13 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.3" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
         <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.4.3">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="Moq" Version="4.20.70" />
+        <PackageReference Include="xunit" Version="2.7.1" />
     </ItemGroup>
 
 </Project>
