Renamed the Client Project To ClientLogic, and also fixed the dependencies and the imports in all the client classes

--- a/ClientCLI/ClientCLI.csproj
+++ b/ClientCLI/ClientCLI.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Client\Client.csproj" />
+    <ProjectReference Include="..\Client\ClientLogic.csproj" />
   </ItemGroup>
 
 </Project>
