--- a/Client/ClientLogic.csproj
+++ b/Client/ClientLogic.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Turnbased-Game\Turnbased-Game.csproj" />
   </ItemGroup>
 
