Removed all the moved classes from Turnbased-Game, and a little bit of general clean-up.

--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Client\Client.csproj" />
+    <ProjectReference Include="..\Client\ClientLogic.csproj" />
     <ProjectReference Include="..\Turnbased-Game\Turnbased-Game.csproj" />
   </ItemGroup>
 
