--- a/Turnbased-Game/Turnbased-Game.csproj
+++ b/Turnbased-Game/Turnbased-Game.csproj
@@ -23,4 +23,9 @@
         <PackageReference Include="xunit.extensibility.core" Version="2.7.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Core\Core.csproj" />
+      <ProjectReference Include="..\Server\ServerLogic.csproj" />
+    </ItemGroup>
+
 </Project>
