--- a/Turnbased-Game/appsettings.json
+++ b/Turnbased-Game/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "urls": "http://127.0.0.1:10290"
 }
